--- a/views/booking_views.xml
+++ b/views/booking_views.xml
@@ -53,8 +53,8 @@
                                 <field name="room_id"
                                        domain="[('hotel_id', '=', hotel_id), ('bed_type', '=', room_type)]"
                                        options="{'no_open': True}"/>
-<!--                                <field name="room_name"/>-->
-                                <field name="booking_status" />
+                                <!--                                <field name="room_name"/>-->
+                                <field name="booking_status"/>
                                 <field name="payment_status" readonly="1"/>
                                 <field name="payment_date" readonly="1"/>
                                 <field name="payment_amount" readonly="1"/>
@@ -64,7 +64,10 @@
                                         type="object"
                                         invisible="payment_status != 'unpaid'"/>
                                 <button name="action_create_invoice"
-                                        string="Create Invoice" type="object" class="btn-primary"/>
+                                        string="Create Invoice"
+                                        type="object"
+                                        class="btn-primary"
+                                        invisible="payment_status != 'paid'"/>
                             </group>
                         </group>
                     </sheet>
