--- a/wizards/payment_views.xml
+++ b/wizards/payment_views.xml
@@ -9,18 +9,18 @@
                     <group>
                         <field name="hotel_id" readonly="1"/>
                         <field name="room_id" readonly="1"/>
-                        <field name="payment_amount" readonly="1"/>
+                        <field name="payment_amount"/>
                     </group>
                     <footer>
-                        <button string="Confirm" type="object" name="confirm_payment" class="btn-primary"/>
+                        <button string="Confirm" type="object" name="action_confirm_payment" class="btn-primary"/>
                         <button string="Cancel" class="btn-secondary" special="cancel"/>
                     </footer>
                 </form>
             </field>
         </record>
          <!-- Action for displaying booking orders that are not paid -->
-        <record id="action_booking_order_payment" model="ir.actions.act_window">
-            <field name="name">Order payment</field>
+        <record id="action_booking_payment" model="ir.actions.act_window">
+            <field name="name">Payment booking</field>
             <field name="res_model">hotel.booking</field>
             <field name="view_mode">list,form</field>
             <field name="domain">[('payment_status', '=', 'unpaid')]</field>
