--- a/views/booking_views.xml
+++ b/views/booking_views.xml
@@ -10,6 +10,7 @@
                     <field name="booking_code"/>
                     <field name="room_id"/>
                     <field name="hotel_id"/>
+                    <field name="partner_id" />
                     <field name="guest_name"/>
                     <field name="booking_date"/>
                     <field name="check_in_date"/>
@@ -35,8 +36,9 @@
                                 <field name="booking_code" readonly="1"/>
                                 <field name="room_id"/>
                                 <field name="hotel_id"/>
-                                <field name="guest_name"/>
-                                <field name="guest_contact"/>
+                                <field name="partner_id" required="1"/>
+                                <field name="guest_name" invisible="1"/>
+                                <field name="guest_contact" invisible="1"/>
                                 <field name="booking_date"/>
                             </group>
                             <group>
@@ -59,11 +61,6 @@
                                 <field name="payment_amount" readonly="1"/>
                             </group>
                             <group string="Actions">
-                                <button name="action_confirm"
-                                        string="Confirm Booking"
-                                        type="object"
-                                        class="btn-primary"
-                                        invisible="booking_status != 'new'"/>
                                 <button name="action_check_in"
                                         string="Check In"
                                         type="object"
@@ -74,16 +71,16 @@
                                         type="object"
                                         class="btn-danger"
                                         invisible="booking_status != 'checked_in'"/>
-                                <button name="action_cancel"
-                                        string="Cancel Booking"
-                                        type="object"
-                                        class="btn-secondary"
-                                        invisible="booking_status in ['checked_in', 'checked_out']"/>
-                                <button name="action_create_invoice"
-                                        string="Create Invoice"
+                                <button name="action_create_sale_order"
+                                        string="Create Sale Order"
                                         type="object"
                                         class="btn-warning"
                                         invisible="payment_status != 'paid'"/>
+                                <button name="action_approve"
+                                        string="Approve Booking"
+                                        type="object"
+                                        class="btn-info"
+                                        invisible="booking_status != 'new' or payment_status != 'paid'"/>
                             </group>
 
                             <group string="Payment">
@@ -118,5 +115,10 @@
             <field name="view_mode">list,form</field>
             <!--        <field name="context">{}</field>-->
         </record>
+
+        <menuitem id="menu_booking" name="Bookings"
+                  parent="menu_hotel_root"
+                  action="action_booking" sequence="10"/>
+
     </data>
 </odoo>
