--- a/views/feature_views.xml
+++ b/views/feature_views.xml
@@ -49,5 +49,10 @@
             <field name="view_mode">list,form</field>
             <!--        <field name="context">{}</field>-->
         </record>
+
+        <menuitem id="menu_feature" name="Features"
+                  parent="menu_hotel_root"
+                  action="action_feature" sequence="50"/>
+
     </data>
 </odoo>
