--- a/views/room_views.xml
+++ b/views/room_views.xml
@@ -144,5 +144,10 @@
             <field name="view_mode">list,form</field>
             <!--        <field name="context">{}</field>-->
         </record>
+
+        <menuitem id="menu_room" name="Rooms"
+                  parent="menu_hotel_root"
+                  action="action_room" sequence="30"/>
+
     </data>
 </odoo>
